--- a/src/templates/components/board/_index.pug
+++ b/src/templates/components/board/_index.pug
@@ -1,5 +1,15 @@
 mixin board
   .board&attributes(attributes)
-    p.board__divider *
-    p.board__subtitle EXAMPLE
-    p.board__keyword digital generated model for e-commerce
+    p.board__subtitle Cynth3a
+    p.board__text
+      | a
+      br
+      | Mannequin
+      br
+      | Synthetic
+      br
+      | Model
+    p.board__link
+      svg(viewBox='0 0 22 21' fill='none' xmlns='http://www.w3.org/2000/svg')
+        path(d='M10.7746 20.52C5.10147 20.52 0.514648 15.9332 0.514648 10.26C0.514648 4.58682 5.10147 0 10.7746 0C16.4478 0 21.0346 4.58682 21.0346 10.26C21.0346 15.9332 16.4478 20.52 10.7746 20.52Z' fill='#E072D2')
+        path(fill-rule='evenodd' clip-rule='evenodd' d='M9.74852 15.2695L10.5935 16.1145L16.4477 10.2602L10.5935 4.40601L9.74852 5.25095L14.1549 9.65728H5.34326V10.8643H14.1537L9.74852 15.2695Z' fill='#282828')
