--- a/src/templates/sections/home/section-about/_index.pug
+++ b/src/templates/sections/home/section-about/_index.pug
@@ -7,5 +7,5 @@ mixin section-about
           h4.title.js-item-animation We are a diverse team of world-class AI engineers, hardware engineers and founders
           .description
             p.text.js-item-animation
-              strong With successful track record both at small innovative companies and industry-leading enterprises such as Snap.
-            p.text.js-item-animation Here at Mannequin we are creating cutting-edge technologies and products that have the potential to advance a range of industries across the globe.
+              strong Decades of combined experience building startups and in leadership at industry leading enterprises such as Snap.
+            p.text.js-item-animation We are on the cutting-edge of AI & ML technologies, developing products that have the potential to transform a range of industries worldwide.
