--- a/src/templates/sections/home/section-feedback/_index.pug
+++ b/src/templates/sections/home/section-feedback/_index.pug
@@ -4,8 +4,8 @@ mixin section-feedback
       .container.container--gradient
         .block
           h3.title.js-item-animation
-            span Don't take our word for it,
-            span let's fix you a nice pilot
+            span Curious? Get a demo.
+            span We’re ready if you are.
           .grid
             +feedback.js-feedback.js-item-animation
-            p.text.js-feedback-animation.js-item-animation We're promising – you'll get an answer from the human :), not from our AI
+            p.text.js-feedback-animation.js-item-animation We promise, you’ll get a human.
