--- a/src/templates/sections/stylist/section-integration/_index.pug
+++ b/src/templates/sections/stylist/section-integration/_index.pug
@@ -4,7 +4,7 @@ mixin section-integration
       .container.container--gradient
         .block
           +bullet(2, 'integration').js-item-animation
-          h2.title.js-item-animation Integration with your ecommerce store with API and Small JS snippet code
+          h2.title.js-item-animation Easy Integration into your ecommerce platform with native API and Small JS snippet code
         .grid
           .grid__item.grid__item--lg
             +picture('stylist/integration-1', 'Integration 1').js-item-animation
