--- a/src/templates/sections/stylist/section-plan/_index.pug
+++ b/src/templates/sections/stylist/section-plan/_index.pug
@@ -4,4 +4,6 @@ mixin section-plan
       .container.container--gradient
         .block
           h4.title.js-item-animation No matter your business size, we've got a plan for you
-          p.text.js-item-animation That's right. We can cut you a great deal. We just need to know a few details about your business first, like the the size of the catalogue, monthly visitors and a couple more.
+          .wrapper.js-item-animation
+            p.text Give us the size of your catalog, your monthly users, and the inspiration behind your brand.
+            strong.text Let us handle the rest.
