--- a/src/templates/sections/stylist/section-sales/_index.pug
+++ b/src/templates/sections/stylist/section-sales/_index.pug
@@ -3,7 +3,7 @@ mixin section-sales
     .container-fluid
       .container.container--gradient
         .block
-          h2.title.js-item-animation Looks drive more sales than individual pieces
+          h2.title.js-item-animation Your customers are shopping for outfits, not items
           .grid
             .grid__column
               .layout
@@ -18,8 +18,8 @@ mixin section-sales
                   .image.image--4.js-item-animation
                     +picture('stylist/sales-4', 'Sales 4')
             .grid__column
-              p.text.js-item-animation Why sell one item when you could be selling several more along the way plus bringing more satisfaction for your shoppers?
-              p.text.js-item-animation Stylist AI plugs into your catalogue and creates fashion-grade looks for your shoppers to browse through and purchase.
+              p.text.js-item-animation Why sell one item when you could be selling several more and ensuring more satisfaction for your shoppers?
+              p.text.js-item-animation Mannequin Stylist plugs directly into your backend to curate completed outfits with the eye of a fashion house vet.
               a.link.js-item-animation
                 span.link__icon
                   svg(viewBox='0 0 69 69' fill='none' xmlns='http://www.w3.org/2000/svg')
