--- a/src/templates/sections/synthetics/section-features/_index.pug
+++ b/src/templates/sections/synthetics/section-features/_index.pug
@@ -2,11 +2,11 @@
   var text = [
     {
       "id": '01',
-      "title": 'Both male and female support'
+      "title": 'Support for Male and Female models'
     },
     {
       "id": '02',
-      "title": 'Photoshoot-grade quality'
+      "title": 'Synthetics quality is indistinguishable from real humans'
     },
     {
       "id": '03',
@@ -14,7 +14,7 @@
     },
     {
       "id": '04',
-      "title": 'Different poses, backgrounds, etc.'
+      "title": '100s of poses and infinite backgrounds supported'
     }
   ]
 
@@ -37,7 +37,7 @@ mixin section-features
                   p.tab__id.tab__id--lg= `${text[0].id}/`
                   .tab__wrapper
                     h3.tab__title= text[0].title
-                    p.tab__description Mannequin AI can create beautiful male models as well. Fully customizable, you guessed it right.
+                    p.tab__description Fully customizable; pop punk or runway, whatever look you can imagine.
                 .tab__slider.js-tab-slider
                   +picture('synthetics/tab-1', 'Product 1')
                   +picture('synthetics/tab-12', 'Product 11')
@@ -53,7 +53,7 @@ mixin section-features
                 .tab__block
                   p.tab__id.tab__id--lg= `${text[1].id}/`
                   .tab__wrapper
-                    h3.tab__title= text[1].title
+                    h3.tab__title Synthetics quality is indistinguishable from real humans
                 .tab__slider.js-tab-slider
                   +picture('synthetics/tab-2', 'Product 2')
                   +picture('synthetics/tab-21', 'Product 21')
@@ -69,7 +69,7 @@ mixin section-features
                 .tab__block
                   p.tab__id.tab__id--lg= `${text[2].id}/`
                   .tab__wrapper
-                    h3.tab__title= text[2].title
+                    h3.tab__title Fully customizable parameters
                     .tab__description
                       ul.list
                         li.list__item
@@ -97,8 +97,8 @@ mixin section-features
                 .tab__block
                   p.tab__id.tab__id--lg= `${text[3].id}/`
                   .tab__wrapper
-                    h3.tab__title= text[3].title
-                    p.tab__description Even we know that photoshoots are about models poses. So our digital models can mimic most of the poses you want (full disclosure - although not all at the moment).
+                    h3.tab__title 100s of poses and infinite backgrounds supported
+                    p.tab__description Relaxed or formal, front facing or reclined, our technology allows for a blend to keep your storefront looking fresh.
                 .tab__slider.js-tab-slider
                   +picture('synthetics/tab-4', 'Product 4')
                   +picture('synthetics/tab-41', 'Product 41')
