--- a/src/templates/sections/synthetics/section-near-future/_index.pug
+++ b/src/templates/sections/synthetics/section-near-future/_index.pug
@@ -10,12 +10,12 @@ mixin section-near-future
             .status
               img(src="./img/progress.webp").img
           +card(
-            'Mannequin Robotics',
+            'Mannequin Production',
             {
               index: 0,
               list: [
-                "Automatic photoshooting stage equipped with Mannequin robot,",
-                "industrial-grade lights and cameras, and connected to Mannequin AI."
+                "Automatic photoshooting stage equipped with a Mannequin Robot,",
+                "industrial-grade lights and cameras, and connected to Mannequin Synthetics."
               ]
             },
             [
@@ -29,19 +29,19 @@ mixin section-near-future
           .steps.js-item-animation
             .steps__item
               p.steps__id 1
-              p.steps__text Put the clothes on the Mannequin robot
+              p.steps__text Dress the robot as desired
 
             .steps__item
               p.steps__id 2
-              p.steps__text Set the robot to the required body size and stance
+              p.steps__text Adjust the robot to the proper proportions and poses
 
             .steps__item
               p.steps__id 3
-              p.steps__text The system takes the pictures
+              p.steps__text Take the pictures
 
             .steps__item
               p.steps__id 4
-              p.steps__text Mannequin AI replaces the robot on the pictures with digital models
+              p.steps__text Mannequin Synthetics takes the images and generates storefront ready photographs of “real” humans wearing your apparel
 
           .head.js-item-animation
             h4.title What will you get?
