--- a/src/templates/sections/synthetics/section-process/_index.pug
+++ b/src/templates/sections/synthetics/section-process/_index.pug
@@ -17,7 +17,7 @@ mixin section-process
                 path(d='M0 11.8946L22.8816 11.8946' stroke='#282828' stroke-width='3')
                 path(d='M12.9843 21.7891L22.8789 11.8946L12.9843 2' stroke='#282828' stroke-width='3')
           .item__cell
-            p.item__text First, you need to have a photo taken (source photo) on a real human model.
+            p.item__text First, you need to have a photo taken (source photo) on a real human model or mannequin.
 
         .item.js-item-animation
           .item__cell
@@ -31,7 +31,7 @@ mixin section-process
                 path(d='M0 11.8946L22.8816 11.8946' stroke='#282828' stroke-width='3')
                 path(d='M12.9843 21.7891L22.8789 11.8946L12.9843 2' stroke='#282828' stroke-width='3')
           .item__cell
-            p.item__text Second,  Mannequin AI identifies apparel and the human on the photo.
+            p.item__text Second, Mannequin Synthetics identifies the apparel and the human in the photo.
 
         .item.js-item-animation
           .item__cell
@@ -45,7 +45,7 @@ mixin section-process
                 path(d='M0 11.8946L22.8816 11.8946' stroke='#282828' stroke-width='3')
                 path(d='M12.9843 21.7891L22.8789 11.8946L12.9843 2' stroke='#282828' stroke-width='3')
           .item__cell
-            p.item__text Third, Mannequin AI creates a digital model and blends it nicely with the apparel on the photo.
+            p.item__text Third, Mannequin Synthetics creates a digital model and blends it nicely with the apparel in the photo.
 
         .block.js-item-animation
-          h4 But what if we told you you don't  even need to have a source photo or human models any more, along with 90% of your photoshooting staff?
+          h4 That’s not all. What if you didn’t need any staff whatsoever? What if your photoshooting process could be fully automatic, or fully remote? Imagine never having to talk to a union rep again.
