--- a/src/templates/sections/synthetics/section-we-better/_index.pug
+++ b/src/templates/sections/synthetics/section-we-better/_index.pug
@@ -6,5 +6,5 @@ mixin section-we-better
           .status.js-item-animation
             img(src="./img/better.webp").img
           h4.title.js-item-animation
-            span Let us show you what the technology is capable of RIGHT NOW and
-            span why we are better than anything you have seen before.
+            span Our technology is best in class.
+            span We are the cutting edge. Let us show you why.
