--- a/src/templates/partials/feedback/_index.scss
+++ b/src/templates/partials/feedback/_index.scss
@@ -1,8 +1,7 @@
 .feedback {
-  @include make-spacer('px', 5);
-  @include make-spacer('py', 8);
-  @include make-spacer('px', 12, sm);
-  @include make-spacer('py', 14, sm);
+  @include make-spacer('p', 5);
+  @include make-spacer('px', 8, sm);
+  @include make-spacer('py', 6, sm);
 
   position: relative;
   max-width: 750px;
@@ -41,6 +40,12 @@
   }
 
   &__count {
+    @include font-size(14px);
+
+    @include media-breakpoint-up(sm) {
+      @include font-size(20px);
+    }
+
     color: #CDCDCD;
   }
 
