--- a/src/templates/sections/default/section-header/_index.scss
+++ b/src/templates/sections/default/section-header/_index.scss
@@ -6,16 +6,16 @@
     @include make-spacer('pt', 20, xl);
 
     .container {
-      @include make-spacer('py', 8);
+      @include make-spacer('py', 6);
       @include make-spacer('px', 2);
 
-      @include make-spacer('pt', 14, sm);
-      @include make-spacer('pb', 7, sm);
+      @include make-spacer('py', 7, sm);
       @include make-spacer('px', 5, sm);
 
-      @include make-spacer('pb', 8, md);
+      @include make-spacer('py', 8, md);
       @include make-spacer('px', 14, md);
 
+      @include make-spacer('py', 5, xl);
       @include make-spacer('pr', 6, xl);
 
       @include make-spacer('pt', 10, xxl);
@@ -24,7 +24,7 @@
 
       display: grid;
       grid-template-rows: 1fr 355px;
-      row-gap: 20px;
+      row-gap: 40px;
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
       border-radius: var(--default-border-radius);
       background-color: var(--color-white);
@@ -84,14 +84,14 @@
       }
 
       @include media-breakpoint-up(sm) {
-        grid-template-rows: 1fr 600px;
-        row-gap: 0;
+        grid-template-rows: 1fr 470px;
+        row-gap: 20px;
       }
 
       @include media-breakpoint-up(xl) {
         align-items: center;
         grid-template-rows: 1fr;
-        grid-template-columns: 1fr 520px;
+        grid-template-columns: 1fr 470px;
         column-gap: 105px;
       }
 
@@ -103,7 +103,9 @@
 
     .block {
       @include make-spacer('mx', auto);
-      @include make-spacer('mt', -8, xl);
+      @include make-spacer('ml', 0, xl);
+      @include make-spacer('ml', auto, xxl);
+      @include make-spacer('mt', -20, xl);
 
       @include media-breakpoint-up(xl) {
         max-width: 525px;
@@ -127,10 +129,6 @@
         @include font-size(20px, 30px);
       }
 
-      @include media-breakpoint-up(xl) {
-        @include flex($direction: column);
-      }
-
       strong,
       span {
         margin: 0 3px;
@@ -139,8 +137,8 @@
 
     .icon {
       position: absolute;
-      left: 20px;
-      bottom: 20px;
+      left: 25px;
+      bottom: 25px;
 
       @include media-breakpoint-up(sm) {
         left: 40px;
@@ -159,77 +157,23 @@
 
     .board {
       position: absolute;
+      top: -10px;
       left: 50%;
-      bottom: -20px;
-      transform: translateX(calc(-50% + 100px));
+      transform: translateX(-100%);
       z-index: 1;
 
       @include media-breakpoint-up(sm) {
-        transform: translateX(calc(-50% + 180px));
-        bottom: -74px;
+        top: 20px;
+        transform: translateX(-150%);
       }
 
       @include media-breakpoint-up(xl) {
-        transform: translateX(calc(-50% + 110px));
-        bottom: -20px;
-      }
-
-      @include media-breakpoint-up(xl) {
+        top: auto;
         bottom: 0;
-      }
-    }
-
-    .circle {
-      @include size(600px);
-
-      position: absolute;
-      top: -55px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: -1;
-
-      @include media-breakpoint-up(sm) {
-        top: -30px;
-      }
-
-      @include media-breakpoint-up(xl) {
-        @include size(850px);
-
-        top: -75px;
-        left: auto;
-        right: -140px;
-        transform: none;
       }
 
       @include media-breakpoint-up(xxl) {
-        @include size(955px);
-
-        top: -100px;
-      }
-
-      &__line {
-        @include media-breakpoint-up(xxl) {
-          display: block;
-        }
-
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border: 1px solid var(--color-white);
-        border-radius: 50%;
-
-        &--sm {
-          @include size(calc(100% - 110px));
-
-          @include media-breakpoint-up(xxl) {
-            @include size(calc(100% - 165px));
-          }
-        }
-
-        &--lg {
-          @include size(100%);
-        }
+        transform: translateX(-175%);
       }
     }
 
@@ -239,10 +183,12 @@
 
       @include media-breakpoint-up(xl) {
         height: 520px;
+        transform: translateY(-20px);
       }
 
       @include media-breakpoint-up(xxl) {
         height: 570px;
+        transform: none;
       }
     }
 
@@ -254,46 +200,55 @@
       &:nth-child(2) {
         @include size(114px);
 
-        bottom: 200px;
-        transform: translateX(calc(-50% - 140px));
+        bottom: 240px;
+        transform: translateX(-110%);
 
         @include media-breakpoint-up(sm) {
-          @include size(199px);
+          @include size(150px);
 
-          bottom: 265px;
-          transform: translateX(calc(-50% - 260px));
+          bottom: 235px;
+          transform: translateX(-200%);
         }
 
         @include media-breakpoint-up(xl) {
-          top: 0;
+          @include size(170px);
+
+          top: 60px;
           bottom: auto;
+          transform: translateX(-180%);
         }
 
         @include media-breakpoint-up(xxl) {
-          transform: translateX(calc(-50% - 270px));
+          @include size(218px);
+
+          top: 0;
         }
       }
 
       &:nth-child(3) {
         @include size(96px);
 
-        bottom: 20px;
-        transform: translateX(calc(-50% + 140px));
+        bottom: 150px;
+        transform: translateX(-180%);
 
         @include media-breakpoint-up(sm) {
-          @include size(168px);
+          @include size(132px);
 
-          bottom: -42px;
-          transform: translateX(calc(-50% + 250px));
+          bottom: 20px;
+          transform: translateX(85%);
         }
 
         @include media-breakpoint-up(xl) {
+          @include size(150px);
+
           bottom: 37px;
-          transform: translateX(calc(-50% + 240px));
+          transform: translateX(90%);
         }
 
         @include media-breakpoint-up(xxl) {
-          transform: translateX(calc(-50% + 260px));
+          @include size(184px);
+
+          transform: translateX(95%);
         }
       }
 
@@ -306,22 +261,23 @@
       }
 
       &--lg {
-        @include size(298px, auto);
+        @include size(320px, auto);
 
-        left: 50%;
         bottom: 0;
-        transform: translate(-50%, 0);
+        left: 50%;
+        transform: translateX(-30%);
 
         @include media-breakpoint-up(sm) {
-          width: 520px;
-          transform: translate(-50%, 74px);
+          width: 400px;
+          transform: translateX(-50%);
         }
 
         @include media-breakpoint-up(xl) {
+          width: 470px;
           transform: translate(-50%, 0);
         }
 
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(xxl) {
           width: 570px;
         }
       }
