--- a/src/templates/sections/home/section-product/_index.pug
+++ b/src/templates/sections/home/section-product/_index.pug
@@ -4,7 +4,7 @@ mixin section-product
       .container.container--gradient
         .block
           +bullet(2, 'product & services').js-item-animation
-          h2.title.js-item-animation See our products and services
+          h2.title.js-item-animation Products and services
         .grid
           .item.js-item-animation
             +card(
@@ -12,8 +12,8 @@ mixin section-product
               {
                 index: 0,
                 list: [
-                  "Photoshoot-grade full-body digital people,",
-                  "created instantly per your specifications. Fashion industry, apparel retailers, are you in?"
+                  "Revolutionary AI technology",
+                  "that can create photo-shoot grade digital people of any race, height, or weight. Indistinguishable from actual humans."
                 ]
               },
               [
@@ -28,11 +28,10 @@ mixin section-product
             +card(
               'AI Stylist',
               {
-                index: 1,
+                index: 0,
                 list: [
-                  "AI stylist",
-                  "for your website that creates stunning looks for your shoppers",
-                  "and increases your metrics across the board. Why sell items when you could be selling the whole looks instead?"
+                  "Intuitive plugin that will immediately increase sales and retention for your ecommerce hub.",
+                  "Don’t sell items, sell outfits curated by AI."
                 ]
               },
               [
@@ -51,8 +50,8 @@ mixin section-product
               {
                 index: 0,
                 list: [
-                  "Fully programmable mannequin robot",
-                  "that will replace 99% of your needs for real human models. Real beast when combined with Mannequin AI."
+                  "Fashion-grade photos of digital models",
+                  "wearing your apparel without the actual photoshoots. No matter if your apparel is real or 3D. We got you covered."
                 ]
               },
               [
@@ -69,8 +68,8 @@ mixin section-product
               {
                 index: 0,
                 list: [
-                  "AI-based (of course) app that lets you try on different hairstyles.",
-                  "No matter what you've seen before, you'll just marvel at Peruka's outcomes"
+                  "Test out your dream look with your dream cut; ",
+                  "see how you’d look with anything from a blue buzzcut to a blonde blowout."
                 ]
               },
               [
