--- a/src/templates/sections/synthetics/section-features/_index.scss
+++ b/src/templates/sections/synthetics/section-features/_index.scss
@@ -136,7 +136,11 @@
         @include font-size(16px, 22px);
 
         @include media-breakpoint-up(sm) {
-          @include font-size(24px, 30px);
+          @include font-size(20px, 30px);
+        }
+
+        @include media-breakpoint-up(xl) {
+          height: 80px;
         }
 
         display: grid;
@@ -278,7 +282,7 @@
         }
 
         display: none;
-        font-weight: var(--typography-semibold);
+        font-weight: var(--typography-medium);
       }
 
       &__slider {
