--- a/src/templates/sections/synthetics/section-use-cases/_index.pug
+++ b/src/templates/sections/synthetics/section-use-cases/_index.pug
@@ -3,20 +3,20 @@ mixin section-use-cases
     .container-fluid
       .container.container--gradient
         +bullet(2, 'use cases').js-item-animation
-        h4.title.title--primary.js-item-animation Who might care?
+        h4.title.title--primary.js-item-animation Why do you care?
         .grid
           .grid__column
             h2.title.title--default.js-item-animation Here are some ideas for the fashion and apparel industries.
           .grid__column
             .block
               .item.js-item-animation
-                h6.item__title Expand your model diversity
-                p.item__text Instead of scouting for different models for your photoshoots, create them from the comfort of your office (or home). Mannequin AI can create terrific-looking models of any ethnicity and appearance.
+                h6.item__title Expansion of model diversity
+                p.item__text Never book another flight. Never worry about finding a face you fear is only in your imagination. Instead of scouting for different models for your photoshoots, create them from the comfort of your office (or home).
 
               .item.js-item-animation
-                h6.item__title Hire less human models
-                p.item__text How about doing all your photoshoots with just ONE model instead of many? Mannequin AI will replace your human model with as many digital ones as you need.
+                h6.item__title Cutting costs on human models
+                p.item__text You’ll never need to deal with a lookbook or catalog again; one model, if any, is all you’ll ever need.  Mannequin Synthetics will create dozens of digital models on photos with your only human model.
 
               .item.js-item-animation
-                h6.item__title Save big on paying model rights royalties
-                p.item__text Give Mannequin AI all your existing photos with human models, and it will replace them with digital ones while keeping all other details like background, accessories etc intact.
+                h6.item__title Owning image rights forever
+                p.item__text The Synthetics you choose to use are YOURS. You’ll always have the sole rights to the IP within your photos, and it’s easy to relaunch old looks with new faces.
