--- a/src/templates/sections/home/section-product/_index.pug
+++ b/src/templates/sections/home/section-product/_index.pug
@@ -8,7 +8,7 @@ mixin section-product
         .grid
           .item.js-item-animation
             +card(
-              'mannequin sinthetics',
+              'Mannequin Synthetics',
               {
                 index: 0,
                 list: [
@@ -26,7 +26,7 @@ mixin section-product
 
           .item.js-item-animation
             +card(
-              'AI Stylist',
+              'Mannequin Stylist',
               {
                 index: 0,
                 list: [
@@ -46,7 +46,7 @@ mixin section-product
 
           .item.js-item-animation
             +card(
-              'Mannequin Robotics',
+              'Mannequin Production',
               {
                 index: 0,
                 list: [
