--- a/src/templates/sections/synthetics/section-near-future/_index.pug
+++ b/src/templates/sections/synthetics/section-near-future/_index.pug
@@ -6,7 +6,7 @@ mixin section-near-future
           +bullet(3, 'near future').js-item-animation
 
           .head.js-item-animation
-            h4.title.title--primary Who does it work?
+            h4.title.title--primary Welcome to the future
             .status
               img(src="./img/progress.webp").img
           +card(
