--- a/src/templates/sections/synthetics/section-process/_index.pug
+++ b/src/templates/sections/synthetics/section-process/_index.pug
@@ -4,7 +4,7 @@ mixin section-process
       .container.container--gradient
         +bullet(4, 'process').js-item-animation
 
-        h2.title.js-item-animation This is how the technology works in a nutshell
+        h2.title.js-item-animation How does it work?
         .item.js-item-animation
           .item__cell
             p.item__id 01
