--- a/src/templates/synthetics.pug
+++ b/src/templates/synthetics.pug
@@ -32,7 +32,7 @@ block content
   +nav(menu, 'synthetics').nav--inner#nav
   main
     +section-header(
-      'mannequin sinthetics',
+      'Mannequin Synthetics',
       1,
       [
         'synthetics/header'
